--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 }
 
-apply plugin: org.ajoberstar.gradle.jacoco.plugins.JacocoPlugin
+apply plugin: 'jacoco'
 
 jacoco {
     integrationTestTaskName = 'integrationTest'
